--- a/src/main/java/fr/miage/lcl/view/Accueil.fxml
+++ b/src/main/java/fr/miage/lcl/view/Accueil.fxml
@@ -1,8 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.web.*?>
+<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+<AnchorPane minHeight="500.0" minWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="283.0" layoutY="14.0" text="Bienvenue sur le logiciel GestionProd" AnchorPane.leftAnchor="283.0" AnchorPane.rightAnchor="282.0" AnchorPane.topAnchor="10.0">
+         <font>
+            <Font name="System Bold" size="33.0" />
+         </font>
+      </Label>
+      <Label layoutX="552.0" layoutY="90.0" text="MENU" AnchorPane.leftAnchor="552.0" AnchorPane.rightAnchor="496.1455078125" AnchorPane.topAnchor="90.0">
+         <font>
+            <Font name="System Bold" size="31.0" />
+         </font>
+      </Label>
+      <Button layoutX="332.0" layoutY="187.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Chaine de Prod." />
+      <Button layoutX="489.0" layoutY="332.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Gestion des commandes" />
+      <Button layoutX="646.0" layoutY="187.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Sotck" />
+   </children>
 </AnchorPane>
-
