--- a/src/main/java/fr/miage/lcl/view/Accueil.fxml
+++ b/src/main/java/fr/miage/lcl/view/Accueil.fxml
@@ -10,20 +10,20 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="500.0" minWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.AccueilController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="283.0" layoutY="14.0" text="Bienvenue sur le logiciel GestionProd" AnchorPane.leftAnchor="283.0" AnchorPane.rightAnchor="282.0" AnchorPane.topAnchor="10.0">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="153.0" layoutY="14.0" text="Bienvenue sur le logiciel GestionProd" AnchorPane.leftAnchor="153.0" AnchorPane.rightAnchor="135.0" AnchorPane.topAnchor="14.0">
          <font>
             <Font name="System Bold" size="33.0" />
          </font>
       </Label>
-      <Label layoutX="552.0" layoutY="90.0" text="MENU" AnchorPane.leftAnchor="552.0" AnchorPane.rightAnchor="496.1455078125" AnchorPane.topAnchor="90.0">
+      <Label layoutX="403.0" layoutY="109.0" prefHeight="46.0" prefWidth="94.0" text="MENU" textAlignment="CENTER" AnchorPane.leftAnchor="403.0" AnchorPane.rightAnchor="403.0" AnchorPane.topAnchor="109.0">
          <font>
             <Font name="System Bold" size="31.0" />
          </font>
       </Label>
-      <Button layoutX="332.0" layoutY="187.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Chaine de Prod." />
-      <Button layoutX="489.0" layoutY="332.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Gestion des commandes" />
-      <Button layoutX="646.0" layoutY="187.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Sotck" />
+      <Button fx:id="viewProd" layoutX="183.0" layoutY="192.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Chaine de Prod." />
+      <Button fx:id="viewCommande" layoutX="340.0" layoutY="349.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Gestion des commandes" />
+      <Button fx:id="viewStock" layoutX="497.0" layoutY="192.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Stock" />
    </children>
 </AnchorPane>
