--- a/src/main/java/fr/miage/lcl/view/StockOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/StockOverview.fxml
@@ -25,7 +25,7 @@
             <TableColumn fx:id="prixV" prefWidth="75.0" text="PrixVente" />
         </columns>
       </TableView>
-      <Button layoutX="14.0" layoutY="428.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Acceuil" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" />
+      <Button layoutX="14.0" layoutY="428.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Accueil" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" />
       <Button defaultButton="true" layoutX="736.0" layoutY="436.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="Import.csv" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="15.0" />
    </children>
 </AnchorPane>
