--- a/src/main/java/fr/miage/lcl/view/AccueilOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/AccueilOverview.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.AccueilController">
+<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.AccueilOverviewController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="153.0" layoutY="14.0" text="Bienvenue sur le logiciel GestionProd" AnchorPane.leftAnchor="153.0" AnchorPane.rightAnchor="135.0" AnchorPane.topAnchor="14.0">
          <font>
