--- a/src/main/java/fr/miage/lcl/view/ChaineDeProdOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/ChaineDeProdOverview.fxml
@@ -8,19 +8,19 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane minHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.ChaineDeProdController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="283.0" layoutY="14.0" text="Chaine de Production" AnchorPane.leftAnchor="283.0" AnchorPane.rightAnchor="282.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font name="System Bold" size="33.0" />
          </font>
       </Label>
-      <TableView layoutX="267.0" layoutY="150.0" prefHeight="200.0" prefWidth="400.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="267.0" AnchorPane.rightAnchor="233.0" AnchorPane.topAnchor="150.0">
+      <TableView fx:id="chaineTable" layoutX="267.0" layoutY="150.0" prefHeight="200.0" prefWidth="400.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="267.0" AnchorPane.rightAnchor="233.0" AnchorPane.topAnchor="150.0">
         <columns>
-          <TableColumn prefWidth="100.0" text="ID" />
-          <TableColumn prefWidth="100.0" text="Nom" />
-            <TableColumn prefWidth="100.0" text="Elem IN" />
-            <TableColumn prefWidth="100.0" text="Elem OUT" />
+          <TableColumn fx:id="codeC" prefWidth="100.0" text="Code" />
+          <TableColumn fx:id="nomC" prefWidth="200.0" text="Nom" />
+            <TableColumn fx:id="entreesC" prefWidth="75.0" text="Entrées" />
+            <TableColumn fx:id="sortiesC" prefWidth="75.0" text="Sorties" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
