--- a/src/main/java/fr/miage/lcl/view/ChaineDeProdOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/ChaineDeProdOverview.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -13,19 +8,20 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.ChaineDeProdController">
+<AnchorPane minHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.ChaineDeProdController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="283.0" layoutY="14.0" text="Chaine de Production" AnchorPane.leftAnchor="283.0" AnchorPane.rightAnchor="282.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font name="System Bold" size="33.0" />
          </font>
       </Label>
-      <TableView fx:id="chaineTable" layoutX="267.0" layoutY="150.0" prefHeight="200.0" prefWidth="400.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="267.0" AnchorPane.rightAnchor="233.0" AnchorPane.topAnchor="150.0">
+      <TableView fx:id="chaineTable" layoutX="267.0" layoutY="150.0" prefHeight="250.0" prefWidth="480.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="217.0" AnchorPane.rightAnchor="203.0" AnchorPane.topAnchor="150.0">
         <columns>
-          <TableColumn fx:id="codeC" prefWidth="100.0" text="Code" />
-          <TableColumn fx:id="nomC" prefWidth="200.0" text="Nom" />
+          <TableColumn fx:id="codeC" text="Code" />
+          <TableColumn fx:id="nomC" prefWidth="130.0" text="Nom" />
             <TableColumn fx:id="entreesC" prefWidth="75.0" text="Entrées" />
             <TableColumn fx:id="sortiesC" prefWidth="75.0" text="Sorties" />
+            <TableColumn fx:id="level" prefWidth="75.0" text="Niveau d'activation" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
