--- a/src/main/java/fr/miage/lcl/view/AccueilOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/AccueilOverview.fxml
@@ -23,7 +23,8 @@
          </font>
       </Label>
       <Button fx:id="viewProd" layoutX="183.0" layoutY="192.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Chaine de Prod." />
-      <Button fx:id="viewCommande" layoutX="340.0" layoutY="349.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Gestion des commandes" />
+      <Button fx:id="viewCommande" layoutX="183.0" layoutY="340.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Gestion des commandes" />
       <Button fx:id="viewStock" layoutX="497.0" layoutY="192.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Stock" />
+      <Button fx:id="viewPersonnel" layoutX="497.0" layoutY="340.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Personnel" />
    </children>
 </AnchorPane>
