--- a/src/main/java/fr/miage/lcl/view/ChaineDeProdOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/ChaineDeProdOverview.fxml
@@ -3,32 +3,61 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane minHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.ChaineDeProdController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="283.0" layoutY="14.0" text="Chaine de Production" AnchorPane.leftAnchor="283.0" AnchorPane.rightAnchor="282.0" AnchorPane.topAnchor="10.0">
-         <font>
-            <Font name="System Bold" size="33.0" />
-         </font>
-      </Label>
-      <TableView fx:id="chaineTable" layoutX="267.0" layoutY="150.0" prefHeight="250.0" prefWidth="480.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="217.0" AnchorPane.rightAnchor="203.0" AnchorPane.topAnchor="150.0">
-        <columns>
-          <TableColumn fx:id="codeC" text="Code" />
-          <TableColumn fx:id="nomC" prefWidth="130.0" text="Nom" />
-            <TableColumn fx:id="entreesC" prefWidth="75.0" text="Entrées" />
-            <TableColumn fx:id="sortiesC" prefWidth="75.0" text="Sorties" />
-            <TableColumn fx:id="level" prefWidth="75.0" text="Niveau d'activation" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <Button fx:id="goAccueil" layoutX="14.0" layoutY="428.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Accueil" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" />
-      <Button layoutX="428.0" layoutY="386.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Planifier" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="428.0" AnchorPane.rightAnchor="372.0" />
+      <SplitPane dividerPositions="0.16606498194945848" orientation="VERTICAL" prefHeight="556.0" prefWidth="906.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="241.0" layoutY="20.0" prefHeight="49.0" prefWidth="422.0" text="Chaine de Production" AnchorPane.leftAnchor="241.0" AnchorPane.rightAnchor="241.0" AnchorPane.topAnchor="20.0">
+                     <font>
+                        <Font name="System Bold" size="33.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <SplitPane dividerPositions="0.7405764966740577" prefHeight="459.0" prefWidth="904.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <items>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                           <children>
+                              <TableView fx:id="chaineTable" prefHeight="457.0" prefWidth="665.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columns>
+                                  <TableColumn fx:id="codeC" text="Code" />
+                                  <TableColumn fx:id="nomC" prefWidth="130.0" text="Nom" />
+                                    <TableColumn fx:id="entreesC" prefWidth="75.0" text="Entrées" />
+                                    <TableColumn fx:id="sortiesC" prefWidth="75.0" text="Sorties" />
+                                    <TableColumn fx:id="level" prefWidth="75.0" text="Niveau d'activation" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                              <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Planifier" AnchorPane.bottomAnchor="128.0" AnchorPane.leftAnchor="441.0" AnchorPane.rightAnchor="365.0" />
+                           </children>
+                        </AnchorPane>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                           <children>
+                              <Button fx:id="goAccueil" layoutX="66.0" layoutY="374.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Accueil" AnchorPane.bottomAnchor="33.0" AnchorPane.leftAnchor="66.0" />
+                              <Button fx:id="changeLevel" layoutX="26.0" layoutY="229.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="180.0" text="Changer le niveau d'activation" />
+                              <TextField fx:id="levelChange" layoutX="56.0" layoutY="183.0" prefHeight="25.0" prefWidth="120.0" />
+                              <Label layoutX="62.0" layoutY="157.0" text="Niveau d'activation :" />
+                           </children>
+                        </AnchorPane>
+                    </items>
+                  </SplitPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
    </children>
    <padding>
       <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
