--- a/src/main/java/fr/miage/lcl/view/PersonnelOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/PersonnelOverview.fxml
@@ -15,12 +15,13 @@
             <Font name="System Bold" size="33.0" />
          </font>
       </Label>
-      <TableView layoutX="267.0" layoutY="150.0" prefHeight="200.0" prefWidth="400.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="267.0" AnchorPane.rightAnchor="233.0" AnchorPane.topAnchor="150.0">
+      <TableView layoutX="200.0" layoutY="150.0" prefHeight="200.0" prefWidth="500.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="150.0">
         <columns>
-          <TableColumn prefWidth="100.0" text="ID" />
-          <TableColumn prefWidth="100.0" text="Nom" />
+          <TableColumn prefWidth="46.0" text="ID" />
+          <TableColumn prefWidth="153.0" text="Nom" />
             <TableColumn prefWidth="100.0" text="Prenom" />
-            <TableColumn prefWidth="100.0" text="Qualifie" />
+            <TableColumn prefWidth="75.0" text="Nb Heures" />
+            <TableColumn prefWidth="100.0" text="Qualif." />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
