--- a/src/main/java/fr/miage/lcl/view/SimulationOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/SimulationOverview.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -9,7 +14,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.SimulationController">
+<AnchorPane minHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.SimulationController">
    <children>
       <SplitPane dividerPositions="0.16606498194945848" orientation="VERTICAL" prefHeight="556.0" prefWidth="906.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -48,7 +53,7 @@
                               <Button fx:id="goAccueil" layoutX="66.0" layoutY="374.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Accueil" AnchorPane.bottomAnchor="33.0" AnchorPane.leftAnchor="66.0" />
                               <Button fx:id="viewChaineProd" layoutX="65.0" layoutY="296.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Retour" />
                               <Button fx:id="simulProduct" layoutX="48.0" layoutY="66.0" mnemonicParsing="false" onAction="#productButtonAction" prefHeight="25.0" prefWidth="134.0" text="Produit" />
-                              <Button fx:id="simulEmployee" layoutX="49.0" layoutY="122.0" mnemonicParsing="false" onAction="#employeeButtonAction" prefHeight="25.0" prefWidth="134.0" text="Employé" />
+                              <Button fx:id="simulEmployee" layoutX="49.0" layoutY="122.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="134.0" text="Employé" />
                            </children>
                         </AnchorPane>
                     </items>
