--- a/src/main/java/fr/miage/lcl/view/SimulationEmployesOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/SimulationEmployesOverview.fxml
@@ -6,18 +6,32 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="475.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.SimulationEmployesController">
+<AnchorPane fx:id="anchorpane" prefHeight="634.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.SimulationEmployesController">
    <children>
-      <Text layoutX="23.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre d'employés qualifiés nécéssaires :" wrappingWidth="245.205078125" />
-      <Text layoutX="23.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre d'employés non qualifiés nécéssaires :" wrappingWidth="245.205078125" />
-      <Label fx:id="besoinQualif" layoutX="349.0" layoutY="86.0" prefHeight="54.0" prefWidth="50.0" text="Label" />
-      <Label fx:id="besoinNonQualif" layoutX="349.0" layoutY="158.0" prefHeight="54.0" prefWidth="50.0" text="Label" />
-      <Text layoutX="191.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Concernant la simulation :" wrappingWidth="217.205078125" />
-      <Text layoutX="155.0" layoutY="244.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Le nombre d'employés disponible :" wrappingWidth="289.205078125" />
-      <Text layoutX="23.0" layoutY="300.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Employés qualifiés :" wrappingWidth="245.205078125" />
-      <Text layoutX="23.0" layoutY="343.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Employés non qualifiés :" wrappingWidth="245.205078125" />
-      <Label fx:id="possedeQualif" layoutX="349.0" layoutY="253.0" prefHeight="54.0" prefWidth="50.0" text="Label" />
-      <Label fx:id="possedeNonQualif" layoutX="349.0" layoutY="310.0" prefHeight="54.0" prefWidth="50.0" text="Label" />
-      <Button fx:id="goAccueil" layoutX="261.0" layoutY="399.0" mnemonicParsing="false" text="Retour" />
+      <Text layoutX="23.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre d'employés qualifiés nécéssaires :" wrappingWidth="245.205078125" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="86.0" />
+      <Text layoutX="23.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre d'employés non qualifiés nécéssaires :" wrappingWidth="315.205078125" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="140.0" />
+      <Label fx:id="besoinQualif" layoutX="349.0" layoutY="88.0" prefHeight="5.0" prefWidth="50.0" text="Label" AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="88.0" />
+      <Label fx:id="besoinNonQualif" layoutX="349.0" layoutY="140.0" prefHeight="0.0" prefWidth="50.0" text="Label" AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="140.0" />
+      <Text layoutX="23.0" layoutY="62.6103515625" strokeType="OUTSIDE" strokeWidth="0.0" text="Concernant la simulation :" wrappingWidth="407.205078125" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="27.0">
+         <font>
+            <Font size="33.0" />
+         </font></Text>
+      <Text layoutX="23.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Le nombre d'employés disponible :" wrappingWidth="518.205078125" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="235.3896484375">
+         <font>
+            <Font size="33.0" />
+         </font></Text>
+      <Text layoutX="23.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Employés qualifiés :" wrappingWidth="245.205078125" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="290.0" />
+      <Text layoutX="23.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Employés non qualifiés :" wrappingWidth="245.205078125" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="348.0" />
+      <Label fx:id="possedeQualif" layoutX="349.0" layoutY="286.0" prefHeight="32.0" prefWidth="50.0" text="Label" AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="290.0" />
+      <Label fx:id="possedeNonQualif" layoutX="349.0" layoutY="348.0" prefHeight="32.0" prefWidth="50.0" text="Label" AnchorPane.leftAnchor="349.0" AnchorPane.topAnchor="348.0" />
+      <Button fx:id="retourSimul" layoutX="511.0" layoutY="519.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="78.0" text="Retour" AnchorPane.leftAnchor="511.0" AnchorPane.topAnchor="519.0" />
+      <Button fx:id="goAccueil" layoutX="641.0" layoutY="519.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="81.0" text="Accueil" AnchorPane.leftAnchor="641.0" AnchorPane.topAnchor="519.0" />
+      <Text layoutX="23.0" layoutY="442.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Résumé :" wrappingWidth="518.205078125" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="406.0">
+         <font>
+            <Font size="33.0" />
+         </font>
+      </Text>
+      <Label fx:id="resume" layoutX="19.0" layoutY="464.0" prefHeight="32.0" prefWidth="719.0" text="Veuillez charger la simulation afin de calculer le nombre de personnel nécéssaire" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="464.0" />
+      <Button fx:id="chargerButton" layoutX="614.0" layoutY="101.0" mnemonicParsing="false" text="Charger" />
    </children>
 </AnchorPane>
