--- a/src/main/java/fr/miage/lcl/view/PersonnelOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/PersonnelOverview.fxml
@@ -15,13 +15,11 @@
             <Font name="System Bold" size="33.0" />
          </font>
       </Label>
-      <TableView layoutX="200.0" layoutY="150.0" prefHeight="200.0" prefWidth="500.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="150.0">
+      <TableView fx:id="personneTable" layoutX="200.0" layoutY="150.0" prefHeight="200.0" prefWidth="500.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="150.0">
         <columns>
-          <TableColumn prefWidth="46.0" text="ID" />
-          <TableColumn prefWidth="153.0" text="Nom" />
-            <TableColumn prefWidth="100.0" text="Prenom" />
-            <TableColumn prefWidth="75.0" text="Nb Heures" />
-            <TableColumn prefWidth="100.0" text="Qualif." />
+          <TableColumn fx:id="code" prefWidth="46.0" text="Code salarié" />
+            <TableColumn fx:id="nbH" prefWidth="75.0" text="Nombre d'heure" />
+            <TableColumn fx:id="qualification" prefWidth="100.0" text="Qualification" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
