--- a/src/main/java/fr/miage/lcl/view/PersonnelOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/PersonnelOverview.fxml
@@ -1,32 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="500.0" minWidth="900.0" prefHeight="533.0" prefWidth="1060.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.PersonnelOverviewController">
+<AnchorPane minHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.PersonnelOverviewController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="283.0" layoutY="14.0" text="Personnel" AnchorPane.leftAnchor="283.0" AnchorPane.rightAnchor="282.0" AnchorPane.topAnchor="10.0">
-         <font>
-            <Font name="System Bold" size="33.0" />
-         </font>
-      </Label>
-      <TableView fx:id="personneTable" layoutX="201.0" layoutY="140.0" prefHeight="246.0" prefWidth="571.0" AnchorPane.bottomAnchor="147.0" AnchorPane.leftAnchor="201.0" AnchorPane.rightAnchor="288.0" AnchorPane.topAnchor="140.0">
-        <columns>
-          <TableColumn fx:id="code" prefWidth="46.0" text="Code salarié" />
-            <TableColumn fx:id="nbH" prefWidth="75.0" text="Quota horraire" />
-            <TableColumn fx:id="qualification" prefWidth="100.0" text="Qualification" />
-            <TableColumn fx:id="nbHdispo" prefWidth="75.0" text="Heures disponible" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <Button fx:id="viewAccueil" layoutX="14.0" layoutY="428.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Accueil" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" />
-      <Button fx:id="ficheSalarie" layoutX="819.0" layoutY="226.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="194.0" text="Voir la fiche salarié" AnchorPane.bottomAnchor="246.0" AnchorPane.leftAnchor="819.0" AnchorPane.rightAnchor="47.0" AnchorPane.topAnchor="226.0" />
+      <SplitPane dividerPositions="0.16606498194945848" orientation="VERTICAL" prefHeight="556.0" prefWidth="906.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="241.0" layoutY="20.0" prefHeight="49.0" prefWidth="422.0" text="Personnel" AnchorPane.leftAnchor="241.0" AnchorPane.rightAnchor="241.0" AnchorPane.topAnchor="20.0">
+                     <font>
+                        <Font name="System Bold" size="33.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <SplitPane dividerPositions="0.7405764966740577" prefHeight="459.0" prefWidth="904.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <items>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                           <children>
+                              <TableView fx:id="personneTable" onMouseClicked="#clickedColumn" prefHeight="457.0" prefWidth="665.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columns>
+                                  <TableColumn fx:id="code" text="Code" />
+                                  <TableColumn fx:id="nbH" prefWidth="130.0" text="Nom" />
+                                    <TableColumn fx:id="qualification" prefWidth="75.0" text="Entrées" />
+                                    <TableColumn fx:id="nbHdispo" prefWidth="75.0" text="Sorties" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                              <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Planifier" AnchorPane.bottomAnchor="128.0" AnchorPane.leftAnchor="441.0" AnchorPane.rightAnchor="365.0" />
+                           </children>
+                        </AnchorPane>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                           <children>
+                              <Button fx:id="goAccueil" layoutX="66.0" layoutY="374.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Accueil" AnchorPane.bottomAnchor="33.0" AnchorPane.leftAnchor="66.0" />
+                           </children>
+                        </AnchorPane>
+                    </items>
+                  </SplitPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
    </children>
+   <padding>
+      <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+   </padding>
 </AnchorPane>
